python-testify (0.1.10) unstable; urgency=low

  * Fix JSON logging to include proper test method class. Fixes #13 (sumeet)
  * Fix setup.py to not import testify, preventing some installation 
    issues (rhettg)

 -- Rhett Garber <rhett@yelp.com>  Fri, 7 April 2011 16:29:16 -0700

python-testify (0.1.9) unstable; urgency=low

  * Fix 'provides' field for PyPI (eklitzke)
  * Add --bucket-salt option for shaking up test bucketing (ayust)

 -- Amber Yust <ayust@yelp.com>  Tue, 30 November 2010 17:14:14 -0700

python-testify (0.1.8) unstable; urgency=low

  * Print a better error message when test discovery fails (eklitzke)

 -- Evan Klitzke <evan@eklitzke.org>  Mon, 18 Oct 2010 14:28:25 -0700

python-testify (0.1.7) unstable; urgency=low

  * Fix for JSON plugin causing bad return value (ayust@yelp.com)

 -- Rhett Garber <rhett@yelp.com>  Fri, 17 Sep 2010 17:00:16 -0700

python-testify (0.1.6) unstable; urgency=low

  * Packaging fixes (rhett@yelp.com)
  * Console logging option (lenza@yelp.com)

 -- Rhett Garber <rhett@yelp.com>  Thu, 26 August 2010 11:14:00 -0700

python-testify (0.1.5) unstable; urgency=low

  * intersection of test suites (ayust)

 -- Oliver Nicholas <bigo@yelp.com>  Mon, 16 August 2010 18:55:00 -0700

python-testify (0.1.4) unstable; urgency=low

  * Plugin functionality (rhettg)
  * JSON result storing (rhettg)
  * Turtle enhancements for memoized attribute access (rhettg)
  * Resolved an issue with non-test case directories during test discovery (rhettg)
  * Detect TTY to automatically disable colorized output (rhettg)

 -- Rhett Garber <rhett@yelp.com>  Tue, 10 August 2010 17:34:00 -0700

python-testify (0.1.3) unstable; urgency=low

  * Profiling option (eskil)
  * User friendly command line errors (Closes: #3) (rhettg)

 -- Rhett Garber <rhett@yelp.com>  Tue, 20 July 2010 16:55:00 -0700

python-testify (0.1.2) unstable; urgency=low

  * Ensure ability to move tests to a particular bucket
