@@ -3,6 +3,8 @@ python-testify (0.1.10) unstable; urgency=low
   * Fix JSON logging to include proper test method class. Fixes #13 (sumeet)
   * Fix setup.py to not import testify, preventing some installation 
     issues (rhettg)
+  * Remove required dependency on IPython. Fixes #9 (rhettg)
+  * Autodetect color support for test output. Fixes #4 (rhettg)
 
  -- Rhett Garber <rhett@yelp.com>  Fri, 7 April 2011 16:29:16 -0700
 
